Added Class With js

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <!--------------------------------------------------------------FOOTER------------------------------------------------------------------->
-            <div class="main-footer flex">
+            <div class="main-footer">
                 <div class="footer-upper flex">
                     <ul class="flex align-items">
                         <a href="">
